docs(admin): docs(admin): kanBanNiang Config

--- a/blogs/Git/2022/011201.md
+++ b/blogs/Git/2022/011201.md
@@ -17,19 +17,19 @@ categories:
 ## ***创建PAT***
 
 ### ***设置***
-1、点击用户头像，选择「设置」，进入到设置页面。
+1. 点击用户头像，选择「设置」，进入到设置页面。
 
 ![设置](https://img-blog.csdnimg.cn/1f622b0961bf498289351ad26ad523f2.png#pic_center)
 
-2、拉到页面最下面，选择 `Developer settings` 。
+2. 拉到页面最下面，选择 `Developer settings` 。
 
 ![Developer settings](https://img-blog.csdnimg.cn/6792dc8b2972449c9c08e7348e058a8c.png#pic_center)
 
 ### ***创建***
-1、选择第三个 `Personal access tokens` ，然后 `Generate new token` 。
+1. 选择第三个 `Personal access tokens` ，然后 `Generate new token` 。
 ![PAT](https://img-blog.csdnimg.cn/7aa4dd0c05274576ae4b5a556cf27420.png#pic_center)
 
-2、填写 `token` 名称，选择 `token` 过期时间，由于只需要能够对普通仓库 `push` 就行了，所以把 `repo` 部分勾上即可。
+2. 填写 `token` 名称，选择 `token` 过期时间，由于只需要能够对普通仓库 `push` 就行了，所以把 `repo` 部分勾上即可。
 ![创建](https://img-blog.csdnimg.cn/f1356028536046e2a71e3b5f44b2cc07.png#pic_center)
 
 ## ***注意***
