--- a/blogs/Navicat/2021/120401.md
+++ b/blogs/Navicat/2021/120401.md
@@ -10,7 +10,7 @@ categories:
 - MySQL
 ---
 ## ***准备工作***
-### ***01、创建目录***
+### ***01.创建目录***
 
 #### a) 在`/opt` 目录下面创建`Navicat`目录，并修改权限。
 
@@ -36,26 +36,26 @@ sudo mkdir /opt/navicat-keygen-tools
 sudo chown -R [电脑用户名] /opt/navicat-keygen-tools
 ```
 
-### ***02、libcapstone-dev***
+### ***02.libcapstone-dev***
 运行下面的指令，安装`libcapstone-dev`。
 ```bash
 sudo apt install libcapstone-dev
 ```
 
-### ***03、cmake***
+### ***03.cmake***
 安装`cmake`
 ```bash
 sudo apt install cmake
 ```
 
-### ***04、rapidjson***
+### ***04.rapidjson***
 运行下面的指令，安装`rapidjson`。
 ```bash
 sudo apt install rapidjson-dev
 ```
 
 ## ***下载***
-### ***01、下载安装包***
+### ***01.下载安装包***
 下载安装包放在`/opt/Navicat`目录下，做好准备。
 
 ***官网下载***
@@ -68,7 +68,7 @@ sudo apt install rapidjson-dev
 
 [OneDrive  密码：1204| navicat15-premium-cs.AppImage](https://1drv.ms/u/s!ArX4Rl_fSedEhLg6rV_N-Sth1ZMrVA?e=MYFWQk)
 
-### ***02、keystone***
+### ***02.keystone***
 下载[keystone](https://github.com/zepingwong/keystone)放在`/opt/keystone`目录下，做好准备。
 
 ***Git下载***
@@ -83,7 +83,7 @@ git clone https://github.com/zepingwong/keystone.git
 
 [OneDrive 密码：1204 | keystone](https://1drv.ms/u/s!ArX4Rl_fSedEhLg5dSurelT7jKkzzQ?e=M7cCih)
 
-### ***03、keygen-tools***
+### ***03.keygen-tools***
 下载 [navicat-keygen-tools](https://github.com/zepingwong/navicat-keygen-tools) 放在`/opt/navicat-keygen-tools`目录下，做好准备。
 
 ***Github下载：***
@@ -102,7 +102,7 @@ git clone https://github.com/HeQuanX/navicat-keygen-tools.git
 
 [OneDrive 密码：1204 | navicat-keygen-tools](https://1drv.ms/u/s!ArX4Rl_fSedEhLg7f9RixwnTWWJAzQ?e=sLRzhF)
 
-### ***04、下载打包工具***
+### ***04.下载打包工具***
 
 下载 [AppImage 打包工具](https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage)，解压过后，放在`/opt/Navicat`目录下，方便接下来的操作。
 
@@ -125,7 +125,7 @@ sudo chmod +x appimagetool-x86_64.AppImage
 ```
 
 ## ***安装***
-### ***01、keystone***
+### ***01.keystone***
 安装`keystone`步骤如下：
 ```bash
 # 进入keystone文件夹
@@ -144,7 +144,7 @@ sudo ldconfig
 
 > 如果在执行make-share.sh的时候出现下面的错误`No CMAKE_CXX_COMPILER could be found.`，那就需要安装一下`build-essential`这个依赖（运行`sudo apt install build-essential`），再执行`../make-share.sh`；
 >
-### ***02、keygen-tools***
+### ***02.keygen-tools***
 编译安装`navicat-keygen-tools`。
 ```bash
 # 进入工具目录
@@ -203,35 +203,35 @@ cd /opt/navicat-keygen-tools/bin
 # 运行注册机
 ./navicat-keygen --text RegPrivateKey.pem
 ```
-### ***01、选择产品***
+### ***01.选择产品***
 选择产品，这里输入1，选择Premium。
 ![选择产品](https://img-blog.csdnimg.cn/fec9deca99f144e3bbb12c296124069a.png#pic_center)
 
-### ***02、选择语言***
+### ***02.选择语言***
 选择语言，这里输入1,选择简体中文
 
 ![选择语言](https://img-blog.csdnimg.cn/3bd237f639eb40b6a2f37c649a967905.png#pic_center)
 
-### ***03、选择版本号***
+### ***03.选择版本号***
 选择版本号，这里输入15。
 ![选择版本号](https://img-blog.csdnimg.cn/cf4c4c6639e343e886e1255b6c09ced4.png#pic_center)
 
-### ***04、填写信息***
+### ***04.填写信息***
 得到生成的序列号，复制序列号，完成用户名，和组织的填写。
 
-### ***05、注册***
+### ***05.注册***
 回到Navicat程序，点击注册
 ![注册](https://img-blog.csdnimg.cn/56065872a9054cd79531a4e9fd752cc0.png#pic_center)
 
-### ***06、手动激活***
+### ***06.手动激活***
 把序列号输入进去，点击注册，因为断网，所以选择手动激活
 ![手动激活](https://img-blog.csdnimg.cn/fda92790d52940c4b075f9bd488047eb.png#pic_center)
 
-### ***07、生成激活码***
+### ***07.生成激活码***
 复制请求码，粘贴到控制台，按一下回车（千万不要连续按两次，否则会退出，如果没反应，等一下再按一次），然后会出现激活码。
 ![请求码](https://img-blog.csdnimg.cn/a20ef20600014a8e8a41c2ac00add84e.png#pic_center)
 
-### ***08、大功告成***
+### ***08.大功告成***
 复制激活码，粘贴进去，然后点击确定，大功告成！
 ![大功告成](https://img-blog.csdnimg.cn/d32d5433f9d242a0a4f6c91869f1555b.png#pic_center)
 
