--- a/blogs/Windows/2020/090601.md
+++ b/blogs/Windows/2020/090601.md
@@ -3,24 +3,27 @@ title: Windows Terminal 添加管理员身份启动CMD、PowerShell
 date: 2020-09-06
 tags:
 - Windows
-- Environment
 categories:
 - Windows
 ---
 
-
 ## ***前言***
+
 本文写于2020年9月6日，详细描述了Windows Terminal添加管理员身份启动CMD和Windows PowerShell选项。
+
 ## ***1. 安装gsudo***
-管理员身份运行Windows PowerShell，并执行以下语句，并输入`Y`，执行情况见截图。
+
+管理员身份运行 `Windows PowerShell` ，并执行以下语句，并输入 `Y` ，执行情况见截图。
 
 ```bash
 choco install gsudo
 ```
-![安装gsudo](https://img-blog.csdnimg.cn/b01ba28b970a4653a950f35f0302607a.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5rGf5Z-O5pKF5Zi055qE5bed576M,size_20,color_FFFFFF,t_70,g_se,x_16#pic_center)
+
+![Snipaste_2022-04-13_17-08-57.png](https://s2.loli.net/2022/05/08/31CPw5xOWkG6asV.png)
+
 >如果遇到以下错误
->![在这里插入图片描述](https://img-blog.csdnimg.cn/360c3d7f21414115b749daaea6d69e59.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5rGf5Z-O5pKF5Zi055qE5bed576M,size_20,color_FFFFFF,t_70,g_se,x_16#pic_center)
->则，执行以下命令并，输入`Y`
+>![Snipaste_2022-04-13_16-59-27.png](https://s2.loli.net/2022/05/08/tQIfOE7hZkFTl8u.png)
+>则，执行以下命令并，输入 `Y`
 >```bash
 >set-executionpolicy remotesigned
 >```
@@ -29,24 +32,37 @@ choco install gsudo
 >iwr https://chocolatey.org/install.ps1 -UseBasicParsing | iex
 >```
 >如果在这一步遇到链接被中断的错误，则需要借助工具科学上网并开启全局代理，重新用管理员身份启动Windows PowerShell。
->![继续执行](https://img-blog.csdnimg.cn/09b41dc0f74347d3a4b4505bcd74631e.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5rGf5Z-O5pKF5Zi055qE5bed576M,size_20,color_FFFFFF,t_70,g_se,x_16#pic_center)
->重新执行`choco install gsudo`
+>![Snipaste_2022-04-13_17-06-05.png](https://s2.loli.net/2022/05/08/DJk84aBp9gRIQmt.png)
+>重新执行 `choco install gsudo`
 
 ## ***2. 添加配置***
+
 ### ***2.1 打开Windows Terminal设置***
-打开Windows Terminal设置，添加新配置，并复制已有配置文件进行修改。
+
+打开 `Windows Terminal` 设置，添加新配置，并复制已有配置文件进行修改。
+
 ### ***2.2 添加新配置文件***
-![添加新配置](https://img-blog.csdnimg.cn/8791cf83cf564ceaa638d4d1189516f0.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5rGf5Z-O5pKF5Zi055qE5bed576M,size_20,color_FFFFFF,t_70,g_se,x_16#pic_center)
+
+![Snipaste_2022-04-13_17-06-50.png](https://s2.loli.net/2022/05/08/isJNEnzKOV8BpbQ.png)
 
 ### ***2.3 复制已有配置***
-![复制已有配置](https://img-blog.csdnimg.cn/02db83dc3bf74fca86a82af847cd4608.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5rGf5Z-O5pKF5Zi055qE5bed576M,size_20,color_FFFFFF,t_70,g_se,x_16#pic_center)
+
+![Snipaste_2022-04-13_17-11-37.png](https://s2.loli.net/2022/05/08/YtcZ7AuMdCaJq1X.png)
+
 ### ***2.4 修改配置文件***
+
 复制的配置文件可以直接通过Terminal的图形化界面进行修改，也可以打开JOSN配置文件进行修改，推荐使用前者。
-![修改配置文件](https://img-blog.csdnimg.cn/47cfd752e6dc40528bd0fa6878d7efdb.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5rGf5Z-O5pKF5Zi055qE5bed576M,size_20,color_FFFFFF,t_70,g_se,x_16#pic_center)
-修改名称为`命令提示符（管理员）`；在命令行最前面添加`gsudo.exe` **（注意：.exe后面有一个空格）**。修改后，点击【保存】即可。修改后的配置如图下图所示，
-![修改配置文件](https://img-blog.csdnimg.cn/d4e0488ba7894537af7561f6bf3ca542.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5rGf5Z-O5pKF5Zi055qE5bed576M,size_20,color_FFFFFF,t_70,g_se,x_16#pic_center)
+
+![Snipaste_2022-04-13_17-22-10.png](https://s2.loli.net/2022/05/08/l3utYab4RzBd7IM.png)
+
+修改名称为 `命令提示符（管理员）` ；在命令行最前面添加 `gsudo.exe`  **（注意：.exe后面有一个空格）**。修改后，点击【保存】即可。修改后的配置如图下图所示，
+
+![Snipaste_2022-04-13_17-25-19.png](https://s2.loli.net/2022/05/08/Rp7klDiws8deYuf.png)
+
 >以添加“命令提示符（管理员）”为例，Windows Terminal添加方式相同。
 
 ## ***3. 测试结果***
+
 打开命令提示符（管理员）标签，安全警告选择是，即可实现效果：
-![测试结果](https://img-blog.csdnimg.cn/a90f3e5a7b514051ae2f43e82cbf0551.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5rGf5Z-O5pKF5Zi055qE5bed576M,size_20,color_FFFFFF,t_70,g_se,x_16#pic_center)
+
+![Snipaste_2022-04-13_17-29-00.png](https://s2.loli.net/2022/05/08/inU4OmxKcvrjAQB.png)
