--- a/blogs/Jupyter/2019/121101.md
+++ b/blogs/Jupyter/2019/121101.md
@@ -1,11 +1,12 @@
 ---
-title: Jupyter Notebook 自动补全功能
+title: Jupyter Notebook 代码自动补全功能
 date: 2019-12-11
 tags:
 - Jupyter
 - Python
 categories:
 - Jupyter
+- Python
 ---
 
 
@@ -15,16 +16,17 @@ categories:
 python -m pip install jupyter_contrib_nbextensions
 jupyter contrib nbextension install --user --skip-running-check
 ```
-## ***修改配置***
-主页会多出一个`Nbextensions`选项
 
-![修改配置](https://img-blog.csdnimg.cn/3a309946628445798954574cc58b9d69.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5rGf5Z-O5pKF5Zi055qE5bed576M,size_20,color_FFFFFF,t_70,g_se,x_16#pic_center)
+## ***修改配置***
+主页会多出一个 `Nbextensions` 选项
+
+![Snipaste_2022-04-13_21-41-56.png](https://s2.loli.net/2022/05/08/4U8RTacD97OlqI3.png)
 
 
 勾选 `Hinterland`选择代码自动补全，我的设置如下，选择某项之后有下面会有功能介绍，自行选择即可
 
-![修改配置](https://img-blog.csdnimg.cn/bb5e724c41074bd2b866efd38d1e5e2a.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5rGf5Z-O5pKF5Zi055qE5bed576M,size_20,color_FFFFFF,t_70,g_se,x_16#pic_center)
+![Snipaste_2022-04-13_21-45-11.png](https://s2.loli.net/2022/05/08/dvwr9xfVHoQJP3m.png)
 
+![Snipaste_2022-04-13_21-43-55.png](https://s2.loli.net/2022/05/08/cdvuKhHxX67lNo9.png)
 
-![修改配置](https://img-blog.csdnimg.cn/5e18acf18b7e401394d84aeef76f81b4.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5rGf5Z-O5pKF5Zi055qE5bed576M,size_20,color_FFFFFF,t_70,g_se,x_16#pic_center)
-要注意的是，没有取消这个兼容选项是不能进行上面的勾选操作的，可以先取消，设置完之后再打开，确保`Jupyter Notebook`的稳定
+要注意的是，没有取消这个兼容选项是不能进行上面的勾选操作的，可以先取消，设置完之后再打开，确保 `Jupyter Notebook` 的稳定
