--- a/blogs/Windows/2021/081001.md
+++ b/blogs/Windows/2021/081001.md
@@ -1,21 +1,27 @@
 ---
 title: Windows 上帝模式「完全控制面板」的介绍和使用
-date: 2021-08-10
+date: 2021-08-01
 tags:
 - Windows
-- Environment
 categories:
 - Windows
 ---
 
 ## ***上帝模式***
+
 ### ***介绍***
+
 「上帝模式」英文名为「God Mode」，又称为「完全控制面板」，涵盖了微软 Windows 操作系统的所有设置和用户操作命令。
-![上帝模式](https://img-blog.csdnimg.cn/4bde85b0ea6f4199901eb8c689143acd.png#pic_center)
+
+![Snipaste_2022-04-25_11-00-27.png](https://s2.loli.net/2022/05/08/ozQOfLdGv8SEtDH.png)
+
 ### ***作用***
+
 - 「完全控制面板」是Windows 系统中隐藏的一个简单的文件夹窗口，包含了几乎所有Windows系统的设置，如控制面板的功能、界面个性化、辅助功能选项等方方面面的控制设置，用户只需通过这一个窗口就能实现所有的操控，而不必再去为调整一个小小的系统设置细想半天究竟该在什么地方去打开设置。
 - Windows 11正在将系统设置和控制面板的功能进行融合，但是到目前为止这些设置对普通用户来说还是非常复杂的，像个性化、显示设置这些功能很杂很碎，经常会找不到到底在哪里设置，那么，上帝模式就很好的解决了这个问题。
+
 ### ***适用范围***
+
 - Windows 7
 - Windows 8.1
 - Windows 10
@@ -23,15 +29,23 @@ categories:
 - 此功能理论上适用于所有NT6.0以上（包括6.0）的操作系统。
 
 ## ***打开方式***
-### ***方法 1：运行打开***
-快捷键`win+r`打开运行，输入`shell:::{ED7BA470-8E54-465E-825C-99712043E01C}`
-### ***方法 2：快捷方式***
-#### ***2.1 在桌面新建文件夹***
-在桌面新建文件夹，并命名为`GodMode.{ED7BA470-8E54-465E-825C-99712043E01C}`
-![新建文件夹](https://img-blog.csdnimg.cn/5b019aa0b3d643cf93e117d3cbdc2d0a.png#pic_center)
-![重命名](https://img-blog.csdnimg.cn/27a0f57ec6f04044a698c898a5c11a3f.png#pic_center)
 
+### ***方法 1：运行打开***
+
+快捷键`win+r`打开运行，输入`shell:::{ED7BA470-8E54-465E-825C-99712043E01C}`
+
+### ***方法 2：快捷方式***
+
+#### ***2.1 在桌面新建文件夹***
+
+在桌面新建文件夹，并命名为`GodMode.{ED7BA470-8E54-465E-825C-99712043E01C}`
+
+![Snipaste_2022-04-25_11-16-02.png](https://s2.loli.net/2022/05/08/zfm2ptToAQLxbHN.png)
+
+![Snipaste_2022-04-25_11-16-31.png](https://s2.loli.net/2022/05/08/RXI6qL5odthANbB.png)
 
 #### ***2.2 开启上帝模式***
+
 新建文件夹后，刷新一下，发现刚刚新建的文件夹，文件名消失了，图标变成了控制面板。接下来双击这个图标，开启你的上帝模式。
-![开启上帝模式](https://img-blog.csdnimg.cn/a593a57e7ce54969ad457ab7b0344e3c.png#pic_center)
+
+![Snipaste_2022-04-25_11-17-26.png](https://s2.loli.net/2022/05/08/AoUk3XurxwVBhpW.png)
