--- a/blogs/Windows/2021/120501.md
+++ b/blogs/Windows/2021/120501.md
@@ -1,28 +1,41 @@
 ---
-title: Ubuntu&Windows双系统时间不同步，Windows慢8个小时
+title: Ubuntu&Windows 双系统时间不同步，Windows 慢8个小时
 date: 2021-12-05
 tags:
 - Windows
 - Ubuntu
-- Environment
 categories:
 - Windows
+- Ubuntu
 ---
 
 
 ## ***问题描述***
+
 ubuntu 和 windows 双系统使用过程中，发现从一个系统切换到另一个系统后，时间就会出错，表现为—— 时差8小时。为什么？如何解决？
+
 ## ***为什么会出现时差***
+
 在了解时差出现的原因之前，先了解以下几个时钟的概念：
+
 ### ***系统时间 / 本地时间（System time / Local time）***
+
 指Linux系统内部的时间。我们在系统任务栏中能直接看到的时间就是系统时间。
+
 ### ***实时时钟（Real-Time Clock, RTC）***
+
 实时时钟是PC主板上的晶振及相关电路组成的时钟电路的生成脉冲，它控制着计算机系统的时间。操作系统中所提到的RTC，指的就是在计算机主板控制下的时间，即系统时间，为计算机硬件的内部时钟。
+
 ### ***协调世界时（Coordinated Universal Time, UTC）***
+
 协调世界时（Coordinated Universal Time，简称UTC）是最主要的世界时间标准，其以原子时秒长为基础，在时刻上尽量接近于格林尼治标准时间。
+
 ### ***格林尼治标准时间（Greenwich Mean Time, GMT）***
+
 格林尼治平时（Greenwich Mean Time，GMT）是指位于英国伦敦郊区的皇家格林尼治天文台当地的平太阳时，因为本初子午线被定义为通过那里的经线。
+
 ### ***CST***
+
 CST同时是以下两个时区的英文缩写：
 
 - 中国标准时间：China Standard Time
@@ -36,11 +49,12 @@ CST同时是以下两个时区的英文缩写：
 
 UTC也是计算机系统中的一个时间衡量标准，Ubuntu默认就将机器时间视为UTC。Ubuntu 16.04及更高版本的时间管理工具`timedatectl`中，UTC时间被单独列出来。
 
-### ***为什么时差刚好是8个小时？***
+## ***为什么时差刚好是8个小时？***
 
 在中国，双系统导致的时差不多不少，正好是8个小时。而这8个小时的时差，正是中国所在时区东八区（GMT+8）相对于GMT的时间差。UTC正与GMT重合，加上其又是Ubuntu系统的时间依据（Ubuntu认为机器时间是UTC），因此对于时区设置为东八区的中国用户来说，就是正好差了8小时。
 
 ## ***方法一：Ubuntu中设置***
+
 自16.04版本起，`timedatectl`成为Ubuntu的时间管理工具。不带参数运行时，它会输出当前的时间，以及系统时间的一些配置参数。输入结果如下：
 ```shell
 Local time: Sun 2021-12-05 16:42:14 CST
@@ -53,6 +67,7 @@ System clock synchronized: yes
 ```
 
 ### ***1、更改硬件时间标准***
+
 为了让Ubuntu能正确显示时间，需要运行以下命令，将硬件时间由UTC改为CST。设置完成后，重启电脑生效：
 ```shell
 sudo timedatectl set-local-rtc 1
@@ -67,10 +82,15 @@ Warning: The system is configured to read the RTC time in the local time zone.
          'timedatectl set-local-rtc 0'.
 ```
 不过可以忽略这个问题。
+
 ### ***2、同步本地时间***
-联网打开“Ubuntu设置”→“日期和时间”，开启“自动设置时间和日期”，稍等片刻。
-![同步本地时间](https://img-blog.csdnimg.cn/4dba19de07ff4f4f974f285c459702a9.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5rGf5Z-O5pKF5Zi055qE5bed576M,size_20,color_FFFFFF,t_70,g_se,x_16#pic_center)
+
+联网打开「Ubuntu设置」→「日期和时间」，开启「自动设置时间和日期」，稍等片刻。
+
+![2021-12-05_16-44.png](https://s2.loli.net/2022/05/08/A6u3lZEQOIyksBW.png)
+
 ### ***3、 同步本地时间***
+
 运行以下命令，将本地时间更新到硬件时间上：
 ```shell
 sudo hwclock --localtime --systohc
@@ -93,12 +113,15 @@ Warning: The system is configured to read the RTC time in the local time zone.
 ```
 
 ## ***方法二：在Windows中设置***
+
 还有另一种解决思路，在Windows中设置。打开管理员模式的命令提示符或PowerShell（在Windows+X快捷菜单中），输入以下命令：
 ```shell
 reg add HKLM\SYSTEM\CurrentControlSet\Control\TimeZoneInformation /v RealTimeIsUniversal /t REG_DWORD /d 1
 ```
 原理就是：在注册表项`HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Control\TimeZoneInformation`中添加一个名为`RealTimeIsUniversal`的值，类型为`REG_DWORD`，数据为`1`。此项的作用就是让Windows将硬件时间当作UTC，与Ubuntu的默认设置一致（**重启生效**）。
+
 ## ***注意事项***
+
 **切勿在两个系统中同时设置。**
 
 上述两种系统的方法不能同时使用，否则会导致两个系统的时间标准不统一。因为在Ubuntu中，我们是要把默认的机器时间标准从UTC改动出去，但在Windows中却刚好相反。时间标准不统一，造成的后果与适用本教程前一模一样，只是错乱的系统变成了Windows。
