fix(admin): icon

--- a/blogs/SSH/2020/021101.md
+++ b/blogs/SSH/2020/021101.md
@@ -1,11 +1,11 @@
 ---
-title: Windows下使用ssh-add报错 Error connecting to agent No such file or directory
+title: Windows ssh-add 报错 Error connecting to agent No such file or directory
 date: 2020-02-11
 tags:
-- Git
+- Windows
 - SSH
 categories:
-- Git
+- Windows
 ---
 
 
@@ -13,8 +13,31 @@ categories:
 
 ### ***环境***
 
-- **操作系统：**Windows 10
-- **终端：**Windows Terminal、Windows PowerShell
+- **操作系统**：Windows 10/11
+- **终端**：Windows Terminal、Windows PowerShell
+
+### ***问题***
+
+Windows环境下执行
+
+```bash
+ssh-add ~/.ssh/id_rsa
+```
+
+报错如下
+
+```bash
+Error connecting to agent: No such file or directory
+```
+
+![Snipaste_2022-04-19_09-24-44.png](https://s2.loli.net/2022/05/08/wpYvzGxBdteugfq.png)
+
+## ***问题描述***
+
+### ***环境***
+
+- **操作系统**：Windows 10/11
+- **终端**：Windows Terminal、Windows PowerShell
 
 ### ***问题***
 
@@ -36,17 +59,17 @@ Error connecting to agent: No such file or directory
 
 ### ***1. 启动PowerShell***
 
-管理员身份启动Windows PowerShell
+管理员身份启动 「Windows PowerShell」。
 
 ### ***2. 检查服务***
 
-运行以下指令，检查ssh-agent服务是否启动成功。
+运行以下指令，检查 `ssh-agent` 服务是否启动成功。
 
 ```bash
 get-service ssh*
 ```
 
-若输出结果为`Stopped`，则表示服务未启动。
+若输出如下，显示 `Status` 结果为`Stopped`，则表示服务未启动。
 
 ```bash
 Status   Name               DisplayName
@@ -63,16 +86,19 @@ Set-Service -Name ssh-agent -StartupType Manual
 Start-Service ssh-agent
 ```
 
-![Snipaste_2022-04-19_09-49-18.png](https://s2.loli.net/2022/05/08/EaHDyxfAO5o1sNl.png)
+再次使用 `get-service ssh*` 查看服务是否启动，如下图所示显示 `Status` 为 `Running` 则表示， `ssh-agent` 服务已启动。
+
+![Snipaste_2022-04-19_09-56-16.png](https://s2.loli.net/2022/05/09/rVhuYi9jHa3vy4w.png)
+
 
 ### ***4. 检查***
 
-运行以下指令查看ssh-agent是否启动成功
+运行以下指令查看 `ssh-agent` 已经添加的秘钥：
 
 ```bash
 ssh-add -l
 ```
 
-![Snipaste_2022-04-19_09-49-37.png](https://s2.loli.net/2022/05/08/WGPYEsKAkCeNHuO.png)
+![Snipaste_2022-05-09_10-21-40.png](https://s2.loli.net/2022/05/09/I7K1BwPM4NiX2pV.png)
 
-> 作者的计算机未添加秘钥，所以输出`The  agent has no identities`
+> 如果未未添加过秘钥，则输出 `The  agent has no identities`
