fix(admin): title

--- a/blogs/Python/2021/122301.md
+++ b/blogs/Python/2021/122301.md
@@ -1,5 +1,5 @@
 ---
-title: ERROR: No matching distribution found for mysqlclient
+title: 'ERROR: No matching distribution found for mysqlclient'
 date: 2021-12-23
 tags:
 - pip
