docs(admin): git

--- a/blogs/Git/2019/102201.md
+++ b/blogs/Git/2019/102201.md
@@ -1,23 +1,21 @@
 ---
-title: Windows Git 安装
+title: Windows下安装Git
 date: 2019-10-22
 tags:
 - Git
 - Windows
 categories:
 - Git
-- Windows
+sidebar: auto
 ---
-
-
 
 ## ***下载***
 
 [Git 官网](https://git-scm.com/)
 
-![Snipaste_2022-01-22_17-13-05.png](https://s2.loli.net/2022/05/08/fLG65XjW8ENVTmP.png)
+![Snipaste_2022-01-22_17-13-05.png](https://s2.loli.net/2022/05/13/9AZkCKIh7liaqeg.png)
 
-![Snipaste_2022-01-22_17-14-24.png](https://s2.loli.net/2022/05/08/pFMei2D3RIhvwYN.png)
+![Snipaste_2022-01-22_17-14-24.png](https://s2.loli.net/2022/05/13/XgETPV6BziHZjyb.png)
 
 ## ***安装***
 
@@ -25,37 +23,37 @@ categories:
 
 点击 `Next` 继续。
 
-![Snipaste_2022-01-22_17-16-22.png](https://s2.loli.net/2022/05/08/zxoBEgu5PTkbDva.png)
+![Snipaste_2022-01-22_17-16-22.png](https://s2.loli.net/2022/05/13/QN7HtORgr8WbJMx.png)
 
 ### ***02、选择安装路径***
 
 在输入框内输入想要安装到的本机路径，也就是实际文件夹位置，或击 `Browse...` 选择已经存在的文件夹，然后点击 `Next` 按钮继续。
 
-![Snipaste_2022-01-22_17-17-24.png](https://s2.loli.net/2022/05/08/JxcXI6OsHlgR2un.png)
+![Snipaste_2022-01-22_17-17-24.png](https://s2.loli.net/2022/05/13/SlMiNE9kReK8c1v.png)
 
 ### ***03、选择安装组件***
 
 决定是否在桌面创建快捷方式；决定在所有控制台窗口中使用 `TrueType` 字体；是否每天检查Git的Windows更新。这些根据自己需要选择。完成后，点击 `Next` 继续。
 
-![Snipaste_2022-01-22_17-18-26.png](https://s2.loli.net/2022/05/08/HaSZGiBNxfluEeC.png)
+![Snipaste_2022-01-22_17-18-26.png](https://s2.loli.net/2022/05/13/UIhb3GYvgWS9AsD.png)
 
 ### ***04、选择开始菜单页***
 
 创建开始菜单中的程序名称，如果不修改，直接点 `Next` 继续。
 
-![Snipaste_2022-01-22_17-18-42.png](https://s2.loli.net/2022/05/08/EpdiJOSkADmRt8g.png)
+![Snipaste_2022-01-22_17-18-42.png](https://s2.loli.net/2022/05/13/d7SVtJBKwsjZh2f.png)
 
 ### ***05、选择默认编辑器***
 
 选择Git文件默认的编辑器，很少用到，所以默认 `Vim` 即可，直接点 `Next` 继续。
 
-![Snipaste_2022-01-22_17-18-56.png](https://s2.loli.net/2022/05/08/POoqn9Y8vseJU7k.png)
+![Snipaste_2022-01-22_17-18-56.png](https://s2.loli.net/2022/05/13/ykmJHgshZCAGMcp.png)
 
 ### ***06、默认分支名称***
 
 调整新仓库默认分支的名称，新版GitHub默认分支名称为 `main` ，但是Git的默认分支名称是 `Master` 。修改后，点击 `Next` 继续。
 
-![Snipaste_2022-01-22_17-20-53.png](https://s2.loli.net/2022/05/08/imMKV67NlHbrO8n.png)
+![Snipaste_2022-01-22_17-20-53.png](https://s2.loli.net/2022/05/13/x5UR6SgNhivPDIY.png)
 
 ### ***07、调整环境变量***
 
@@ -67,13 +65,13 @@ categories:
 
 选择推荐的选项第二种配置，点击 `Next` 继续。
 
-![Snipaste_2022-01-22_17-21-18.png](https://s2.loli.net/2022/05/08/4w7VfvjkmQJRTYZ.png)
+![Snipaste_2022-01-22_17-21-18.png](https://s2.loli.net/2022/05/13/or8uWbCZ6TPvQid.png)
 
 ### ***08、SSL证书选择***
 
 默认即可，点击`Next`继续。
 
-![Snipaste_2022-01-22_17-21-31 1.png](https://s2.loli.net/2022/05/08/VvKhtbaOBIsR7Zn.png)
+![Snipaste_2022-01-22_17-21-31 1.png](https://s2.loli.net/2022/05/13/uRiD5z2NUk9EAb4.png)
 
 ### ***09、HTTPS后端传输***
 
@@ -84,11 +82,13 @@ categories:
 
 使用默认的第一个选项，点击 `Next` 继续。
 
-![Snipaste_2022-01-22_17-21-31.png](https://s2.loli.net/2022/05/08/RsUwxPDLo6VtMK2.png)
+
+
+![Snipaste_2022-01-22_17-21-31.png](https://s2.loli.net/2022/05/13/uUX8rIgYOhopsMq.png)
 
 ### ***10、配置行尾符号***
 
-![Snipaste_2022-01-22_17-21-54.png](https://s2.loli.net/2022/05/08/2FTdso89Gm7XIyf.png)
+![Snipaste_2022-01-22_17-21-54.png](https://s2.loli.net/2022/05/13/Ti3V9GfaqxSDtoF.png)
 
 - 第一个选项是“**签出Windows风格，提交Unix风格的行尾**”。签出文本文件时，Git会将LF转换为CRLF。提交文本文件时，CRLF将转换为LF。对于跨平台项目，这是Windows上的推荐设置（“ core.autocrlf”设置为“ true”）
 
@@ -100,7 +100,7 @@ categories:
 
 ### ***11、配置终端仿真***
 
-![Snipaste_2022-01-22_17-22-10.png](https://s2.loli.net/2022/05/08/hQdXbHtn5caylBF.png)
+![Snipaste_2022-01-22_17-22-10.png](https://s2.loli.net/2022/05/13/y7pzsuwWnX6F91P.png)
 
 - 第一个选项是“**使用MinTTY（MSYS2的默认终端）**”。Git Bash将使用MinTTY作为终端模拟器，该模拟器具有可调整大小的窗口，非矩形选择和Unicode字体。Windows控制台程序（例如交互式Python）必须通过“ winpty”启动才能在MinTTY中运行。
 
@@ -110,23 +110,23 @@ categories:
 
 ### ***12、`git pull`行为***
 
-![Snipaste_2022-01-22_17-22-21.png](https://s2.loli.net/2022/05/08/NQCsLnhaDMevyk8.png)
+![Snipaste_2022-01-22_17-22-21.png](https://s2.loli.net/2022/05/13/JEgQCwGcFiTVSO2.png)
 
 选择默认的default， `Next` 继续。
 
 ### ***13、选择凭证助手***
 
-![Snipaste_2022-01-22_17-22-35.png](https://s2.loli.net/2022/05/08/UTiP32SmzEv6rfK.png)
+![Snipaste_2022-01-22_17-22-35.png](https://s2.loli.net/2022/05/13/j8JCSDIV4ANgmLO.png)
 
 ### ***14、其他的配置***
 
 其他配置全部默认即可。
 
-![Snipaste_2022-01-22_17-22-50.png](https://s2.loli.net/2022/05/08/gyxs31OoIcn92P7.png)
+![Snipaste_2022-01-22_17-22-50.png](https://s2.loli.net/2022/05/13/U5xCMKlh2Iie4z1.png)
 
 ### ***15、实验选项***
 
-![Snipaste_2022-01-22_17-23-03.png](https://s2.loli.net/2022/05/08/adl4bNoAPCeTkg6.png)
+![Snipaste_2022-01-22_17-23-03.png](https://s2.loli.net/2022/05/13/laoqD2u4PiRIBwY.png)
 
 ### ***16、完成安装***
 
