--- a/blogs/Git/2020/011501.md
+++ b/blogs/Git/2020/011501.md
@@ -1,5 +1,5 @@
 ---
-title: GitHub 获取「Personal Access Token(PAT)」
+title: 解决 git@github.com Permission denied(publickey)
 date: 2020-01-15
 tags:
 - Git
