--- a/blogs/Navicat/2021/120401.md
+++ b/blogs/Navicat/2021/120401.md
@@ -2,12 +2,12 @@
 title: Ubuntu 20.04 安装 Navicat Premium 15
 date: 2021-12-04
 tags:
-- MySQL
-- Ubuntu
-- Software
+ - MySQL
+ - Ubuntu
+ - Software
 categories:
-- Software
-- MySQL
+ - MySQL
+sidebar: auto
 ---
 ## ***准备工作***
 ### ***01.创建目录***
