--- a/en/blogs/2019/102201.md
+++ b/en/blogs/2019/102201.md
@@ -1,43 +1,55 @@
 ---
-title: Windows Git 安装
+title: Install Git on Windows
 date: 2019-12-11
 tags:
-- Git
-- Windows
+ - Git
+ - Windows
 categories:
--  Git
+ - Git
 ---
 
 ## ***下载***
+
 [Git 官网](https://git-scm.com/)
 
 ![下载](https://img-blog.csdnimg.cn/3bb28a6708b24d9ba545d9b4cd465f0c.png#pic_center)
+
 ![下载](https://img-blog.csdnimg.cn/489ae9003e324fb294e566d353492c85.png#pic_center)
+
 ## ***安装***
+
 ### ***01、查看许可声明***
+
 点击`Next`继续。
 
 ![使用许可声明](https://img-blog.csdnimg.cn/eedd5d33fb7a4d2c925761310d548b2d.png#pic_center)
 
 ### ***02、选择安装路径***
+
 在输入框内输入想要安装到的本机路径，也就是实际文件夹位置，或击`Browse...`选择已经存在的文件夹，然后点击`Next`按钮继续。
 
 ![选择安装路径](https://img-blog.csdnimg.cn/feddb8d3baf24805aeea26a349b03a24.png#pic_center)
 
 ### ***03、选择安装组件***
+
 决定是否在桌面创建快捷方式；决定在所有控制台窗口中使用`TrueType`字体；是否每天检查Git的Windows更新。这些根据自己需要选择。完成后，点击`Next`继续。
 
 ![选择安装组件](https://img-blog.csdnimg.cn/864db8fd216144fc9bb668f7fc546386.png#pic_center)
+
 ### ***04、选择开始菜单页***
+
 创建开始菜单中的程序名称，如果不修改，直接点`Next`继续。
 
 ![选择开始菜单文件夹](https://img-blog.csdnimg.cn/3c52fca2595749b290b681866ed6848c.png#pic_center)
+
 ### ***05、选择默认编辑器***
+
 选择Git文件默认的编辑器，很少用到，所以默认`Vim`即可，直接点`Next`继续。
 
 ![选择Git文件默认编辑器](https://img-blog.csdnimg.cn/c5040c178c3f42b6addf8ccae546d0a5.png#pic_center)
 
 ### ***06、默认分支名称***
+
 调整新仓库默认分支的名称，新版GitHub默认分支名称为`main`，但是Git的默认分支名称是`Master`。修改后，点击`Next`继续。
 
 ![调整默认分支名称](https://img-blog.csdnimg.cn/e684eec0e29048f2a935ca1540f14dae.png#pic_center)
@@ -53,12 +65,15 @@ categories:
 选择推荐的选项第二种配置，点击`Next`继续。
 
 ![设置环境变量](https://img-blog.csdnimg.cn/1d45c3d8e06340c1b8273f4be63b8b30.png#pic_center)
+
 ### ***08、SSL证书选择***
+
 默认即可，点击`Next`继续。
 
 ![SSL证书选择](https://img-blog.csdnimg.cn/b4f662b92d3749f19469657824b3f840.png#pic_center)
 
 ### ***09、HTTPS后端传输***
+
 选择HTTPS后端传输。
 - 第一个选项是“**使用 OpenSSL 库**”。服务器证书将使用ca-bundle.crt文件进行验证。这也是我们常用的选项。
 
@@ -79,6 +94,7 @@ categories:
 - 第三种选项是“**按原样签出，按原样提交**”。当签出或提交文本文件时，Git不会执行任何转换。不建议跨平台项目选择此选项（“ core.autocrlf”设置为“ false”）
 
 这里选择第一个选项，点击`Next`按钮继续。
+
 ### ***11、配置终端仿真***
 
 ![配置终端仿真](https://img-blog.csdnimg.cn/41b247d3cbff4191a22938edbbf1cce5.png#pic_center)
@@ -88,27 +104,36 @@ categories:
 - 第二个选项是“**使用Windows的默认控制台窗口**”。Git将使用Windows的默认控制台窗口（“cmd.exe”），该窗口可以与Win32控制台程序（如交互式Python或node.js）一起使用，但默认的回滚非常有限，需要配置为使用unicode 字体以正确显示非ASCII字符，并且在Windows 10之前，其窗口不能自由调整大小，并且只允许矩形文本选择。
 
 选择默认的第一种选项，点击`Next`继续。
+
 ### ***12、`git pull`行为***
 
 ![选择pull行为](https://img-blog.csdnimg.cn/308d85ecb66847b59a0e02749f4b9816.png#pic_center)
 选择默认的default，`Next`继续。
+
 ### ***13、选择凭证助手***
 
 ![选择凭证助手](https://img-blog.csdnimg.cn/826d6414fc554ab79a89f55c29f8d70d.png#pic_center)
+
 ### ***14、其他的配置***
+
 其他配置全部默认即可。
 
 ![其他配置](https://img-blog.csdnimg.cn/a351ad3eff274f9f8da031a9c87cf1b5.png#pic_center)
+
 ### ***15、实验选项***
 
 ![实验选项](https://img-blog.csdnimg.cn/b0c1fedf4d51453bae05735213df2b13.png#pic_center)
+
 ### ***16、完成安装***
 
 ## ***测试***
+
 在命令提示符窗口输入一下指令：
+
 ```shell
 git
 ```
+
 出现提示语句即表示安装成功。
 
 ![测试](https://img-blog.csdnimg.cn/c8baa936e9fe4692921594cf001d1d05.png#pic_center)
