docs(admin): language

--- a/blogs/Anaconda/2019/112001.md
+++ b/blogs/Anaconda/2019/112001.md
@@ -31,7 +31,7 @@ conda config --set auto_activate_base false
 
 ```shell
 # vim编辑～/.bashrc
-vim ～/.bashrc
+vim ~/.bashrc
 ```
 
 在最后加入：
@@ -45,5 +45,5 @@ conda deactivate
 保存退出后，执行
 
 ```shell
-source ～/.bashrc
+source ~/.bashrc
 ```
