--- a/blogs/Anaconda/2019/121101.md
+++ b/blogs/Anaconda/2019/121101.md
@@ -14,22 +14,22 @@ sidebar: auto
 
 `key` 为要修改的配置名称，`value` 为修改的值
 
-```bash
+```shell
 conda config --add key value
 ```
 
-```bash
+```shell
 conda config --remove key value
 ```
 
-```bash
+```shell
 # 用户使用自定义配置后会生成配置文件
 vim ~/.condarc
 ```
 
 ### ***查看配置***
 
-```bash
+```shell
 conda config --show
 ```
 
@@ -37,77 +37,77 @@ conda config --show
 
 ### ***创建虚拟环境***
 
-```bash
+```shell
 conda create -n env_name
 ```
 
-```bash
+```shell
 conda create --name env_name
 ```
 
 #### ***创建制定python版本的环境***
 
-```bash
+```shell
 conda create -n env_name python=python_version
 ```
 
-```bash
+```shell
 conda create --name env_name python=python_version
 ```
 
 #### ***创建包含某些包的环境***
 
-```bash
+```shell
 conda create --name your_env_name package_name_1 package_name_2
 ```
 
 #### ***创建指定python版本下包含某些包的环境***
 
-```bash
+```shell
 conda create --name your_env_name python=python_version package_name_1 package_name_2
 ```
 
 ### ***删除虚拟环境***
 
-```bash
+```shell
 conda remove -n env_name --all
 ```
 
 ### ***查看虚拟环境***
 
-```bash
+```shell
 conda info -e 
 ```
 
-```bash
+```shell
 conda info --envs
 ```
 
-```bash
+```shell
 conda env list
 ```
 
 ### ***激活虚拟环境***
 
-```bash
+```shell
 conda activate env_name
 ```
 
 如果失败了，那么首先
 
-```bash
+```shell
 source activate env_name
 ```
 
 再
 
-```bash
+```shell
 conda activate env_name
 ```
 
 ### ***退出虚拟环境***
 
-```bash
+```shell
 conda deactivate
 ```
 
@@ -115,14 +115,15 @@ conda deactivate
 
 如果你想把你当前的环境配置与别人分享，这样ta可以快速建立一个与你一模一样的环境（同一个版本的python及各种包）来共同开发/进行新的实验。一个分享环境的快速方法就是给ta一个你的环境的`.yaml`文件。
 
-```bash
+```shell
 conda env export > environment.yaml
 ```
 
 从该文件创建环境
 
-```ba
+```shell
 conda env create -f environment.yaml
+```
 
 ### 重命名虚拟环境
 
@@ -130,24 +131,24 @@ conda env create -f environment.yaml
 
 首先` clone` 一份` new_name` 的环境
 
-​```bash
+```shell
 conda create -n new_name --clone env_name
 ```
 
 删除原环境
 
-```bash
+```shell
 conda remove -n env_name --all
 ```
 
 ### ***Python版本***
 
-```bash
+```shell
 # 查看Python版本
 python --version
 ```
 
-```bash
+```shell
 # 判断编译器位置
 which python
 ```
@@ -156,13 +157,13 @@ which python
 
 ### ***查看当前环境下已有的包***
 
-```bash
+```shell
 conda list
 ```
 
 ### ***查看非激活环境下已有的包***
 
-```bash
+```shell
 conda list -n env_name
 ```
 
@@ -170,13 +171,13 @@ conda list -n env_name
 
 #### ***在当前环境中安装包***
 
-```bash
+```shell
 conda install package_name
 ```
 
 #### ***为指定环境安装某个包***
 
-```bash
+```shell
 conda install -n env_name package_name
 ```
 
@@ -184,13 +185,13 @@ conda install -n env_name package_name
 
 #### ***删除当前环境中的包***
 
-```bash
+```shell
 conda remove package_name
 ```
 
 #### ***删除指定环境中的包***
 
-```bash
+```shell
 conda remove --name env_name package_name
 ```
 
@@ -198,13 +199,13 @@ conda remove --name env_name package_name
 
 只保留环境初始的包（比如python），其他全部删除
 
-```bash
+```shell
 conda clean -a
 ```
 
 ## ***获取版本号***
 
-```bash
+```shell
 conda --version
 # 或
 conda -V
@@ -212,24 +213,24 @@ conda -V
 
 ## ***更新***
 
-```bash
+```shell
 # 更新至最新版本，也会更新其它相关包
 conda update conda
 ```
 
-```bash
+```shell
 conda update anaconda
 ```
 
 ### ***更新所有包***
 
-```bash
+```shell
 onda update --all
 ```
 
 ### ***更新指定包***
 
-```bash
+```shell
 conda update package_name
 ```
 
