--- a/blogs/MySQL/2022/011901.md
+++ b/blogs/MySQL/2022/011901.md
@@ -22,7 +22,7 @@ mysql -u root -p
 
 `mysql` 数据库中存储了用户信息的 `user` 表。
 
-```mysql
+```sql
 use mysql;
 ```
 
@@ -30,7 +30,7 @@ use mysql;
 
 在 `mysql` 数据库的 `user` 表中查看当前 `root` 用户的相关信息
 
-```mysql
+```sql
 select host, user, authentication_string, plugin from user; 
 ```
 
@@ -40,13 +40,13 @@ select host, user, authentication_string, plugin from user;
 
 授权 `root` 用户远程访问：
 
-```mysql
+```sql
 update user set host='%' where user='root';
 ```
 
 ## ***刷新权限***
 
-```mysql
+```sql
 flush privileges;
 ```
 
