docs(admin): notes

--- a/blogs/Windows/2022/041201.md
+++ b/blogs/Windows/2022/041201.md
@@ -1,9 +1,8 @@
 ---
-title: Win10/11 移动C:\Users 目录
+title: 'Win10/11 移动C:\Users 目录'
 date: 2022-04-12
 tags:
 - Windows
-- Environment
 categories:
 - Windows
 ---
