docs(admin): docs(admin): notes

--- a/blogs/Anaconda/2021/111801.md
+++ b/blogs/Anaconda/2021/111801.md
@@ -7,12 +7,11 @@ tags:
 - Anaconda
 categories:
 - Python
-- Anaconda
 ---
 
 ## ***背景***
 
-特定情景下需要root用户安装Anaconda，同时，普通用户需要分享Anaconda环境。这里整理一下root用户和普通用户共享anaconda环境的笔记。
+特定情景下需要 `root` 用户安装 `Anaconda`，同时，普通用户需要分享 `Anaconda` 环境。这里整理一下 `root` 用户和普通用户共享 `Anaconda` 环境的笔记。
 ## ***一、下载Anaconda***
 ### ***方法 1：官网***
 [Anaconda官网](https://www.anaconda.com/products/distribution)下载（比较费时）
