--- a/blogs/Django/2020/020801.md
+++ b/blogs/Django/2020/020801.md
@@ -4,8 +4,10 @@ date: 2020-02-08
 tags:
 - Django
 - Python
+- MySQL
 categories:
-- Django
+- Python
+- MySQL
 ---
 
 ## ***环境配置***
@@ -189,7 +191,6 @@ python manage.py migrate
 **视图**就是一个Python函数，被定义在views.py中
 
 **模板**基本上就是一些输出动态值的经过特殊格式化的HTML文本，支持简单的逻辑结构如循环等。当一个视图要返回一个HTML文档时，它通常会指定一个模板，提供给它所要显示的信息，并在响应里使用模板渲染的结果。
-
 
 
 
