--- a/blogs/Django/2021/112501.md
+++ b/blogs/Django/2021/112501.md
@@ -1,10 +1,10 @@
 ---
-title: Django 继承AbstractUser 自定义用户模型类
+title: Django 继承 AbstractUser 自定义用户模型类
 date: 2021-11-25
 tags:
 - Django
 categories:
-- Django
+- Python
 ---
 
 ## ***AbstractUser***
