--- a/blogs/Git/2020/011501.md
+++ b/blogs/Git/2020/011501.md
@@ -3,8 +3,7 @@ title: 解决 git@github.com Permission denied(publickey)
 date: 2020-01-15
 tags:
 - Git
-categories:
-- Git
+- GitHub
 ---
 
 ## ***问题描述***
