--- a/blogs/VUE3/2021/031001.md
+++ b/blogs/VUE3/2021/031001.md
@@ -3,9 +3,9 @@ title: 修复 Element Plus el-input 组件失去焦点的问题
 date: 2021-03-10
 tags:
 - Vue3
-- Element Plus
+- Vue
 categories:
-- Vue3
+- Vue
 ---
 
 ## ***问题描述***
