--- a/blogs/Windows/2020/011102.md
+++ b/blogs/Windows/2020/011102.md
@@ -1,5 +1,5 @@
 ---
-title: Windows 10 鼠标右键注册表位置
+title: Windows 鼠标右键注册表位置
 date: 2020-01-11
 tags:
 - Windows
@@ -8,31 +8,31 @@ categories:
 sidebar: auto
 ---
 
-## 打开注册表编辑器
+## ***打开注册表编辑器***
 
 在【开始】→【运行】中输入 `regedit` 按回车键之后，打开注册表编辑器。
 
 或者 `win+r` 输入 `regedit`  按回车键之后，打开注册表编辑器。
 
-## 添加鼠标右键新建项
+## ***添加鼠标右键新建项***
 
 对应单击**桌面空白处**，新建菜单中的项目对应注册表中的位置 ：
 
 `HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Explorer\Discardable\PostSetup\ShellNew`
 
-## 鼠标单击桌面
+## ***鼠标单击桌面***
 
 **桌面空白处**点击右键菜单对应注册表位置：
 
 `HKEY_CLASSES_ROOT\Directory\Background\shellex\ContextMenuHandlers`
 
-## 右键单击文件
+## ***右键单击文件***
 
 **鼠标右键文件**，弹出的菜单项对应注册表中的位置：
 
 `HKEY_CLASSES_ROOT\*\shellex\ContextMenuHandlers`
 
-## 右键单击文件夹
+## ***右键单击文件夹***
 
 **鼠标右键文件夹**，弹出的菜单项对应注册表中的位置：
 
