--- a/blogs/Python/2021/030501.md
+++ b/blogs/Python/2021/030501.md
@@ -15,14 +15,14 @@ As the Debian packages are available, We don’t recommend to install Python 3.9
 
 So follow the below instructions to install Python 3.9 using source code on Ubuntu 20.04 Linux system.
 
-## First of all, install essential packages for compiling source code. Open a terminal and execute following commands
+## First, install essential packages for compiling source code. Open a terminal and execute following commands
 
 ```bash
 sudo apt install wget build-essential checkinstall
 sudo apt install libreadline-gplv2-dev libncursesw5-dev libssl-dev libsqlite3-dev tk-dev libgdbm-dev libc6-dev libbz2-dev libffi-dev zlib1g-dev
 ```
 
-## Now, download the Python 3.9 source code from official download site. Switch to a relevent directory and use wget to download source file
+## Now, download the Python 3.9 source code from official download site. Switch to a relevant directory and use wget to download source file
 
 ```bash
 cd /opt 
@@ -37,7 +37,7 @@ cd Python-3.9.0
 sudo ./configure --enable-optimizations 
 ```
 
-## Python source is ready to install. Execute make altinstall command to install Python 3.9 on your system
+## Python source is ready to install. Execute make alt installation command to install Python 3.9 on your system
 
 ```bash
 sudo make altinstall 
