fix(custom): categories page

--- a/blogs/Navicat/2021/041201.md
+++ b/blogs/Navicat/2021/041201.md
@@ -1,9 +1,119 @@
 ---
 title: Windows 安装 Navicat Premium 15
 tags:
-- Windows
 - Navicat
+- Windows
 categories:
 - Windows
 date: 2021-04-12
 ---
+
+## ***下载***
+
+[官网下载 | navicat150_premium_cs_x64.exe](https://download.navicat.com.cn/download/navicat150_premium_cs_x64.exe)
+
+## ***安装***
+
+### ***1、启动安装程序***
+
+![Snipaste_2022-08-11_20-53-44.png](https://s2.loli.net/2022/08/11/4Klfz12NIZL86Dk.png)
+
+### ***2、同意许可***
+
+![Snipaste_2022-08-11_20-55-57.png](https://s2.loli.net/2022/08/11/FCqskS38DpEY49l.png)
+
+### ***3、选择安装目录***
+
+![Snipaste_2022-08-11_20-56-12.png](https://s2.loli.net/2022/08/11/I3hN1n7MRsjXLOc.png)
+
+### ***4、创建快捷方式***
+
+![Snipaste_2022-08-11_20-56-36.png](https://s2.loli.net/2022/08/11/XshjUNqbgkLYuxd.png)
+
+### ***5、创建桌面图标***
+
+![Snipaste_2022-08-11_20-56-54.png](https://s2.loli.net/2022/08/11/p3OlDyzIMhYiud1.png)
+
+### ***6、准备安装***
+
+![Snipaste_2022-08-11_20-57-02.png](https://s2.loli.net/2022/08/11/nTJpRWs9QIZtxhd.png)
+
+### ***7、安装等待***
+
+![Snipaste_2022-08-11_20-57-12.png](https://s2.loli.net/2022/08/11/BExhMIYRndH9eWi.png)
+
+### ***8、完成安装***
+
+![Snipaste_2022-08-11_20-57-18.png](https://s2.loli.net/2022/08/11/wyGeTVSjfQNtLFs.png)
+
+## ***注册***
+
+:::warning
+使用注册机注册后产品升级会导致注册失效，所以在激活前可以先运行 Navicat 并检查更新
+:::
+
+### ***1、运行注册机***
+
+双击运行 Navicat Products - Patch/Keygen 注册机
+
+![Snipaste_2022-08-11_21-09-06.png](https://s2.loli.net/2022/08/11/ey5YXHuwQMDvRfJ.png)
+
+### ***2、开始 patch***
+
+- 2.1 选择产品 Premium
+- 2.2 选择语言 Simplified Chinese （简体中文）
+- 2.3 开始 Patch
+
+> 如果不是安装到默认位置，需要手动选择 Navicat.exe
+
+![Snipaste_2022-08-11_21-10-09.png](https://s2.loli.net/2022/08/11/JbhiKXTLxDZ4nay.png)
+
+Patch 成功结果如下：
+
+![Snipaste_2022-08-11_21-09-56.png](https://s2.loli.net/2022/08/11/8dsyKXIFB7W6thm.png)
+
+### ***3、运行 Navicat***
+
+运行 Navicat，看到试用提醒，点击注册
+
+![Snipaste_2022-08-11_21-12-10.png](https://s2.loli.net/2022/08/11/ZIbw8sLgrKBGVu5.png)
+
+### ***4、生成许可证***
+
+> 这里可以修改 Name & Organization，修改后的信息会出现在 Navicat 启动页面 
+
+回到注册机，生成Serial Keygen，生成序列号会自动出现在Navicat注册页面
+
+![Snipaste_2022-08-11_21-12-31.png](https://s2.loli.net/2022/08/11/LhBXjnNAcRo34K5.png)
+
+![Snipaste_2022-08-11_21-14-01.png](https://s2.loli.net/2022/08/11/EHZrcaXtBVSDij4.png)
+
+### ***5、开始激活***
+
+- 点击激活
+
+  ![Snipaste_2022-08-11_21-14-14.png](https://s2.loli.net/2022/08/11/NhW3U8nYBDzG5lF.png)
+
+- 手动激活
+
+  ![Snipaste_2022-08-11_21-14-54.png](https://s2.loli.net/2022/08/11/TyQg7UCIEDAo86L.png)
+
+### ***7、生成激活码***
+
+- 复制请求码到注册机
+
+  ![Snipaste_2022-08-11_21-15-45.png](https://s2.loli.net/2022/08/11/xKAomlEPHwtXb9S.png)
+
+- 生成激活码
+
+  ![Snipaste_2022-08-11_21-16-58.png](https://s2.loli.net/2022/08/11/J29ygqkI8lahve3.png)
+
+### ***8、激活***
+
+![Snipaste_2022-08-11_21-17-18.png](https://s2.loli.net/2022/08/11/Otn7VaUw42bXMiH.png)
+
+### ***9、注册成功***
+
+![Snipaste_2022-08-11_21-17-49.png](https://s2.loli.net/2022/08/11/1dCvsYlJt3iXZ8T.png)
+
+![Snipaste_2022-08-11_21-17-57.png](https://s2.loli.net/2022/08/11/i51tTCZbvchDELV.png)
