--- a/blogs/Navicat/2021/120401.md
+++ b/blogs/Navicat/2021/120401.md
@@ -1,15 +1,17 @@
 ---
 title: Ubuntu 20.04 安装 Navicat Premium 15
-date: 2021-12-04
 tags:
- - Navicat
- - Ubuntu
- - Software
+- Navicat
+- Ubuntu
 categories:
- - MySQL
+- Ubuntu
+- Linux
+date: 2021-12-04
 sidebar: auto
 ---
+
 ## ***准备工作***
+
 ### ***01.创建目录***
 
 #### a) 在`/opt` 目录下面创建`Navicat`目录，并修改权限。
@@ -20,7 +22,9 @@ sudo mkdir /opt/Navicat
 # 给你的账号赋权限
 sudo chown -R [电脑用户名] /opt/Navicat
 ```
+
 #### b) 在`/opt` 目录下面创建`keystone`目录，并修改权限。
+
 ```bash
 # 创建文件夹
 sudo mkdir /opt/keystone
@@ -29,6 +33,7 @@ sudo chown -R [电脑用户名] /opt/keystone
 ```
 
 #### c) 在`/opt` 目录下面创建`navicat-keygen-tools`目录，并修改权限。
+
 ```bash
 # 创建文件夹
 sudo mkdir /opt/navicat-keygen-tools
@@ -37,7 +42,9 @@ sudo chown -R [电脑用户名] /opt/navicat-keygen-tools
 ```
 
 ### ***02.libcapstone-dev***
+
 运行下面的指令，安装`libcapstone-dev`。
+
 ```bash
 sudo apt install libcapstone-dev
 ```
@@ -91,6 +98,7 @@ git clone https://github.com/zepingwong/keystone.git
 [OneDrive 密码：1204 | keystone](https://1drv.ms/u/s!ArX4Rl_fSedEhLg5dSurelT7jKkzzQ?e=M7cCih)
 
 ### ***03.keygen-tools***
+
 下载 [navicat-keygen-tools](https://github.com/zepingwong/navicat-keygen-tools) 放在`/opt/navicat-keygen-tools`目录下，做好准备。
 
 ***Github下载：***
@@ -111,7 +119,8 @@ git clone https://github.com/HeQuanX/navicat-keygen-tools.git
 
 ### ***04.下载打包工具***
 
-下载 [AppImage 打包工具](https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage)，解压过后，放在`/opt/Navicat`目录下，方便接下来的操作。
+下载 [AppImage 打包工具](https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage)
+，解压过后，放在`/opt/Navicat`目录下，方便接下来的操作。
 
 ***Github下载（推荐）***
 
@@ -152,7 +161,8 @@ sudo make install
 sudo ldconfig
 ```
 
-> 如果在执行make-share.sh的时候出现下面的错误`No CMAKE_CXX_COMPILER could be found.`，那就需要安装一下`build-essential`这个依赖（运行`sudo apt install build-essential`），再执行`../make-share.sh`；
+> 如果在执行make-share.sh的时候出现下面的错误`No CMAKE_CXX_COMPILER could be found.`，那就需要安装一下`build-essential`
+> 这个依赖（运行`sudo apt install build-essential`），再执行`../make-share.sh`；
 
 ### ***02.keygen-tools***
 
@@ -165,8 +175,9 @@ cd /opt/navicat-keygen-tools
 make all
 ```
 
-> 编译安装成功之后，可以在`navicat-keygen-tools\bin`目录下面看到`navicat-keygen`和`navicat-patcher`两个文件,如果出现如下错误，则安装以下这个依赖`libssl-dev`，再执行`make all`就行了。
->![报错](https://img-blog.csdnimg.cn/f14e335d36ac4787b6af22a39035519e.png#pic_center)
+> 编译安装成功之后，可以在`navicat-keygen-tools\bin`目录下面看到`navicat-keygen`和`navicat-patcher`
+> 两个文件,如果出现如下错误，则安装以下这个依赖`libssl-dev`，再执行`make all`就行了。
+> ![报错](https://img-blog.csdnimg.cn/f14e335d36ac4787b6af22a39035519e.png#pic_center)
 
 ## ***提取文件***
 
@@ -263,7 +274,6 @@ cd /opt/navicat-keygen-tools/bin
 ## ***创建桌面图标***
 
 > 在`/usr/share/applications/`目录下面创建`Navicat.desktop`文件,复制下面的内容放进去,保存就行了。
-
 
 ```bash
 [Desktop Entry]
