--- a/blogs/Navicat/2022/052901.md
+++ b/blogs/Navicat/2022/052901.md
@@ -1,12 +1,14 @@
 ---
-title: '2022.05.29 Navicat ODBC驱动管理器：未发现数据源名称并且未指定默认驱动程序'
+title: 'Navicat15 ODBC驱动管理器：未发现数据源名称并且未指定默认驱动程序'
 tags:
 - Navicat
 date: 2022-05-29
+sidebar: auto
 ---
+
 ## ***问题描述***
 
-Navicat 连接 SQL Server报错  “【ODBC驱动器管理器】未发现数据源名称并且未指定默认驱动程序”
+Navicat 连接 SQL Server报错 “【ODBC驱动器管理器】未发现数据源名称并且未指定默认驱动程序”
 
 ![Snipaste_2022-05-29_15-05-51.png](https://s2.loli.net/2022/05/29/9aAREC3FTxug2eN.png)
 
