--- a/blogs/Ubuntu/2021/092201.md
+++ b/blogs/Ubuntu/2021/092201.md
@@ -1,11 +1,12 @@
 ---
 title:  Ubuntu 切换root用户认证失败 Authentication failure
-date: 2021-09-22
 tags:
 - Ubuntu
 - Linux
 categories:
+- Ubuntu
 - Linux
+date: 2021-09-22
 ---
 
 ## ***问题描述***
