style(custom): code

--- a/blogs/Django/2021/112501.md
+++ b/blogs/Django/2021/112501.md
@@ -3,8 +3,9 @@ title: Django 继承 AbstractUser 自定义用户模型类
 date: 2021-11-25
 tags:
 - Django
-categories:
 - Python
+categories:
+- Django
 ---
 
 ## ***AbstractUser***
