--- a/docs/MySQL/install/041201.md
+++ b/docs/MySQL/install/041201.md
@@ -5,11 +5,11 @@ tags:
 - MySQL
 - Windows
 categories:
-- MySQL
+- Database
 ---
 
 ## ***前言***
-本文写于2022年4月12日，详细介绍了Windows操作系统下，使用mysql-installer.msi程序安装MySQl 8.0，安装程序有图形化安装界面，适合新手小白进行尝试。作者会持续跟进此安装方法，此方法失效后会进行说明，并留下新方法的跳转链接。如果需要使用服务器ZIP包安装MySQL 8.0 请移步 [Windows ZIP Archive 安装和卸载 MySQL 8.0](/blogs/MySQL/2022/041301.md)。
+本文写于2022年4月12日，详细介绍了Windows操作系统下，使用mysql-installer.msi程序安装MySQl 8.0，安装程序有图形化安装界面，适合新手小白进行尝试。作者会持续跟进此安装方法，此方法失效后会进行说明，并留下新方法的跳转链接。如果需要使用服务器ZIP包安装MySQL 8.0 请移步 [Windows ZIP Archive 安装和卸载 MySQL 8.0](/docs/MySQL/install/041301.mdmd)。
 ## ***安装***
 ### ***一、 下载安装程序***
 [MySQL :: Download MySQL Installer](https://dev.mysql.com/downloads/windows/installer/)
