--- a/docs/MySQL/install/041301.md
+++ b/docs/MySQL/install/041301.md
@@ -5,12 +5,12 @@ tags:
 - MySQL
 - Windows
 categories:
-- MySQL
+- Database
 ---
 
 ## ***前言***
 
-本文写于2022年4月13日，详细介绍了Windows平台下安装、卸载服务器ZIP Archive 版Mysql 8.0的方法，短期内此方法应该不会有太大变化，如果有新的变化，会进行说明并增加跳转链接。本文以Window 11为例，其他版本Windows 操作系统安装方法大同小异。因为使用ZIP Archive 版本无可视化界面，需要有一定的cmd基础，本文已经尽可能详细的对每一步进行了详细说明，如果觉得此方法有困难，[请移步 Windows msi程序安装MySQL 8.0](/blogs/MySQL/2022/041201.md)。
+本文写于2022年4月13日，详细介绍了Windows平台下安装、卸载服务器ZIP Archive 版Mysql 8.0的方法，短期内此方法应该不会有太大变化，如果有新的变化，会进行说明并增加跳转链接。本文以Window 11为例，其他版本Windows 操作系统安装方法大同小异。因为使用ZIP Archive 版本无可视化界面，需要有一定的cmd基础，本文已经尽可能详细的对每一步进行了详细说明，如果觉得此方法有困难，[请移步 Windows msi程序安装MySQL 8.0](/docs/MySQL/install/041201.mdmd)。
 
 > ***请注意：***
 >
