fix(custom): bug fix

--- a/blogs/ESP32/2022/082002.md
+++ b/blogs/ESP32/2022/082002.md
@@ -1,3 +1,4 @@
+---
 title: Pycharm MicroPython ESP32 开发环境搭建
 date: 2022-08-20
 tags:
@@ -73,6 +74,10 @@ while True:
 运行会提示已经连接成功，至此成功点亮开发板呼吸灯。
 
 ![Snipaste_2022-08-20_13-18-27.png](https://s2.loli.net/2022/08/20/fHm9LbWisdzuhBZ.png)
+
+> 在相应工程名上右键，选择“运行’Flash xxx’”，之后 Pycharm 会把工程下所有文件下载到 ESP32 中，之后自动重启 ESP32，如果只想下载某个文件，在进入某个文件再右键，选择运行。
+> 
+> ![Snipaste_2022-08-20_13-37-20.png](https://s2.loli.net/2022/08/20/HS2AGXOU1yEI4fj.png)
 
 
 
